# src/apis/controllers/Auth/mutations/signup.auth.js
@@ -4,10 +4,15 @@ const createJWT = require("../../../utils/createJWT.utils");
 const User = require("../../../commons/User/user");
 const authValidator = require("../../../utils/validators/authValidator.validator");
 const { user } = require("../../../models/auth.schema");
+const {
+  addAdmin,
+  addCustomer,
+  addEmployee,
+  addManager,
+} = require("../../../controllers/Auth/utils/addAuth.utils.auth");
 
 module.exports = {
-  // signup
-  signup: async (req, res) => {
+  signup: function signup(req, res) {
     const {
       nameUser,
       email,
@@ -24,73 +29,165 @@ module.exports = {
         message: "Passwords do not match",
       });
     }
-    const userData = { email, password, nameUser, userType, mobileNumber };
-    if (
-      authValidator(
-        "email nameUser confirmPassword userType userName mobileNumber password",
-        userData
-      )
-    ) {
-      //finding if the user exists
-      const userExists = await user.findOne({ emailUser: email });
-      if (userExists) {
-        return res
-          .status(400)
-          .send(new Response(false, "User already exists", "", 400, {}));
-      }
-      //hashing the password
-      const { generateSalt, generateHash } = await hashPassword(password);
-      user.password = generateHash;
-      user.salt = generateSalt;
-      //creating the user
-      const newUser = new User(
-        nameUser,
-        userName,
-        email,
-        mobileNumber,
-        password,
-        generateHash,
-        generateSalt,
-        "admin"
-      );
-      //saving the user in the dataabase
-      const token = createJWT(newUser);
-      const addData = await newUser.addUser();
-      if (!addData) {
-        return res
-          .status(400)
-          .send(new Response(false, "User not created", "", 400, {}));
-      }
-      newUser.token = token;
+    const userData = {
+      email,
+      password,
+      nameUser,
+      userType,
+      mobileNumber,
+      userName,
+    };
+    const isValidated = authValidator(
+      "email nameUser confirmPassword userType userName mobileNumber password",
+      userData
+    );
+
+    if (!isValidated) {
       return res
-        .status(200)
-        .send(
-          new Response(true, "User Creation Success", newUser, 200, newUser)
-        );
-    } else {
-      res.status(400).json({
-        status: false,
-        message: "Invalid Data",
+        .status(400)
+        .send(new Response(false, "Invalid data", "", 400, {}));
+    }
+    //checking if the user is already present
+    user
+      .findOne({ emailUser: email })
+      .then((data) => {
+        if (data) {
+          res
+            .status(400)
+            .send(new Response(false, "User already exists", "", 400, {}));
+        } else {
+          //hashing the password
+          hashPassword(password).then((data) => {
+            const user = new User(
+              nameUser,
+              email,
+              userName,
+              mobileNumber,
+              password,
+              data.generateHash,
+              data.generateSalt,
+              userType
+            );
+            //adding the user to the database
+            if (userData.userType == "admin") {
+              const brandID = req.params.brandID;
+              addAdmin(user, brandID)
+                .then((data) => {
+                  res
+                    .status(200)
+                    .send(new Response(true, "Admin added", "", 200, data));
+                })
+                .catch((error) => {
+                  res
+                    .status(400)
+                    .send(
+                      new Response(
+                        false,
+                        "Invalid data",
+                        "",
+                        400,
+                        error.message
+                      )
+                    );
+                });
+            } else if (userData.userType == "manager") {
+              addManager(user)
+                .then((data) => {
+                  res
+                    .status(200)
+                    .send(new Response(true, "Manager added", "", 200, data));
+                })
+                .catch((error) => {
+                  res
+                    .status(400)
+                    .send(
+                      new Response(
+                        false,
+                        "Invalid data",
+                        "",
+                        400,
+                        error.message
+                      )
+                    );
+                });
+            } else if ((userData.userType = "employee")) {
+              addEmployee(user)
+                .then((data) => {
+                  res
+                    .status(200)
+                    .send(new Response(true, "Employee added", "", 200, data));
+                })
+                .catch((error) => {
+                  res
+                    .status(400)
+                    .send(
+                      new Response(
+                        false,
+                        "Invalid data",
+                        "",
+                        400,
+                        error.message
+                      )
+                    );
+                });
+            } else if (userData.userType == "customer") {
+              addCustomer(user)
+                .then((data) => {
+                  res
+                    .status(200)
+                    .send(new Response(true, "Customer added", "", 200, data));
+                })
+                .catch((error) => {
+                  console.log("This is the customer error");
+                  res
+                    .status(400)
+                    .send(
+                      new Response(
+                        false,
+                        "Invalid data",
+                        "",
+                        400,
+                        error.message
+                      )
+                    );
+                });
+            } else {
+              res
+                .status(400)
+                .send(
+                  new Response(false, "Invalid data Customer", "", 400, {})
+                );
+            }
+          });
+        }
+      })
+      .catch((error) => {
+        res
+          .status(400)
+          .send(new Response(false, "Invalid data Main", "", 400, {}));
       });
-    }
   },
+
   //deleting the user
-  deleteUser: async (req, res) => {
-    try {
-      const { id } = req.params;
-      const deleteUser = await user.findByIdAndDelete(id);
-      if (!deleteUser) {
-        return res
+  deleteUser: function (req, res) {
+    const { id } = req.params;
+    user
+      .updateOne({ _id: id }, { $set: { isDeleted: true } })
+      .then((data) => {
+        if (!data) {
+          res
+            .status(400)
+            .send(new Response(false, "User not deleted", "", 400, {}));
+        }
+        res.status(200).send(new Response(true, "User deleted", "", 200, data));
+      })
+      .catch((error) => {
+        res
           .status(400)
-          .send(new Response(false, "User not deleted", "", 400, {}));
-      }
-      return res
-        .status(200)
-        .send(new Response(true, "User deleted", "", 200, deleteUser));
-    } catch (error) {
-      console.log(error);
-      res.status(500).send(new Response(false, "Server Error", "", 500, error));
-    }
+          .send(
+            new Response(false, "User not deleted", "", 400, error.message)
+          );
+      });
   },
   //updating the user
   updateUser: async (req, res) => {
@@ -113,7 +210,4 @@ module.exports = {
       .status(200)
       .send(new Response(true, "User updated", "", 200, updateUser));
   },
-
-
-  
 };
